Bug 370284 - Template export does not include all accounts
Summary: Template export does not include all accounts
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8.0
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-08 08:55 UTC by Ralf Habacker
Modified: 2019-08-29 00:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1,5.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2016-10-08 08:55:28 UTC
The template export does not export all accounts imported from the same account template.

Reproducible: Always

Steps to Reproduce:
1. start KMymoney
2. create new file based on german skr03 template
3. export account template through menu entry file>export->account template
4. Compare exported file with the original template file


Actual Results:  
Several accounts are not exported

Expected Results:  
All accounts should be exported
Comment 1 Ralf Habacker 2016-10-08 08:57:19 UTC
Git commit 77108f8aea86f270d1b6e4ef96dcfed3843d4034 by Ralf Habacker.
Committed on 08/10/2016 at 08:56.
Pushed by habacker into branch '4.8'.

Fix 'Template export does not include all accounts'.

M  +4    -4    kmymoney/converter/mymoneytemplate.cpp

http://commits.kde.org/kmymoney/77108f8aea86f270d1b6e4ef96dcfed3843d4034