Fix 'Template export does not include all accounts'.

BUG:370284